# docwire

./: .gitignore  CMakeLists.txt  COPYING.COM  ChangeLog  LICENSE  README  README.md  build.ps1  build.sh  build_debug_env_msvc.Dockerfile  build_demo.sh  build_env.dockerfile  build_env_msvc.Dockerfile  build_in_docker.ps1  build_in_docker.sh  build_osx.sh  copyright_header.cfg  copyright_header.txt  download_llama_model.sh  gdb_in_docker.sh  run_in_docker.sh  test_env.dockerfile  test_env_msvc.Dockerfile  update_copyright_headers.sh  valgrind_in_docker.sh
.github/workflows/: build.yml
cmake/: osx.cmake  utils.cmake
doc/: .readthedocs.yaml  CMakeLists.txt  ChangeLog  ChangeLog.md  api.dox  cli.dox  coding_guidelines.md  header.html  index.html  mainpage.dox  manifesto.md  plugins.dox  text_extractor.dox
doc/_static/js/: rb2b.js
examples/: CMakeLists.txt  example_0.c  example_0.cpp  example_1.c  example_1.cpp  example_2.c  example_2.cpp  example_3.c  example_3.cpp  example_4.c  example_4.cpp  example_5.c  example_5.cpp  example_6.c  example_6.cpp  example_7.c  example_7.cpp  example_8.c  example_8.cpp  example_9.cpp
ports/cmap-resources/: CMakeLists.txt  portfile.cmake  vcpkg.json
ports/ctranslate2/: portfile.cmake  vcpkg.json
ports/doctotext/: portfile.cmake  vcpkg.json
ports/docwire/: portfile.cmake  vcpkg.json
ports/flan-t5-large-ct2-int8/: portfile.cmake  vcpkg.json
ports/granite-4-1b-q8-0/: portfile.cmake  vcpkg.json
ports/granite-4.0-1b-q8-0/: vcpkg.json
ports/htmlcxx/: portfile.cmake  vcpkg.json
ports/libbfio/: portfile.cmake  vcpkg.json
ports/libcharsetdetect/: CMakeLists.txt  copyright  portfile.cmake  vcpkg.json
ports/libpff/: portfile.cmake  vcpkg.json
ports/libpff-unix/: portfile.cmake  vcpkg.json
ports/mapping-resources-pdf/: CMakeLists.txt  portfile.cmake  vcpkg.json
ports/multilingual-e5-small-ct2-int8/: portfile.cmake  vcpkg.json
ports/opennmt-tokenizer/: portfile.cmake  vcpkg.json
ports/pdfium/: CMakeLists.txt  macos-build.patch  msvc-build.patch  portfile.cmake  public_headers.patch  vcpkg.json
ports/tessdata-fast/: portfile.cmake  vcpkg.json
ports/unzip/: CMakeLists.txt  portfile.cmake  vcpkg.json
ports/wv2/: portfile.cmake  vcpkg.json
src/: CMakeLists.txt  ai.cmake  ai_ct2.cmake  ai_elements.h  ai_embed.cpp  ai_embed.h  ai_llama.cmake  ai_misc_task.cpp  ai_misc_task.h  ai_runner.h  ai_summarize.cpp  ai_summarize.h  ai_task.cpp  ai_task.h  ai_translate.cpp  ai_translate.h  analyze_data.cpp  analyze_data.h  archives.cmake  archives_parser.cpp  archives_parser.h  attachment.cpp  attachment.h  attributes.h  base64.cmake  base64.cpp  base64.h  basic_parser_provider.cpp  basic_parser_provider.h  binary_reader.h  c_text_extractor.c  chain_element.cpp  chain_element.h  chaining.h  charset_converter.cpp  charset_converter.h  chat.cpp  chat.h  checked.h  classify.cpp  (+345 more)
src/wv2/: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  README  RELEASE  TODO  wv2-config
src/wv2/src/: CMakeLists.txt  convert.cpp  dllmagic.h  fields.cpp  fonts.cpp  footnotes97.cpp  footnotes97.h  global.cpp  global.h  graphics.cpp  graphics.h  handlers.h  headers.cpp  lists.cpp  olestorage.h  olestream.cpp  olestream.h  paragraphproperties.h  parser.cpp  parser.h  parser95.cpp  parser95.h  parser97.cpp  parser97.h  parser9x.cpp  parser9x.h  parserfactory.cpp  parserfactory.h  properties97.cpp  properties97.h  styles.cpp  styles.h  textconverter.cpp  textconverter.h  ustring.cpp  ustring.h  utilities.h  word95_generated.cpp  word95_generated.h  word97_generated.cpp  (+8 more)
tests/: 1.DCM.out  1.doc.out.html  1.docx.out.html  1.fodp.out  1.fods.out  1.html.out  1.html.out.html  1.html.restore_attributes.out.html  1.new_api_formatting_style.out  1.odg.out  1.ods.out  1.pptx.out  1.pst  1.pst.2.out  1.pst.3.out  1.pst.out  1.rtf.out  1.webp.out  10.docx  10.docx.out.html  10.docx.tmp  2.doc.out.html  2.docx.out  2.docx.out.html  2.fodp.out  2.fods.out  2.html.out  2.html.out.html  2.jpeg.out  2.jpg.out  2.new_api_formatting_style.out  2.odg.out  2.odp.out  2.ods.out  2.pdf.out  2.pptx.out  2.tiff  2.xlsx.out  3.bmp.out  3.doc.out.html  (+293 more)
tests/after_installation/: CMakeLists.txt
tests/arch_test/subfolder/: subarchive.7z
toolchains/: mingw-w64-x86_64.cmake
tools/: compare_performance_logs.sh  convert_mime_db_json_to_cpp.cmake  copyright_header.txt  generate_3rdparty_components_doc.cmake  helgrind_common.supp  helgrind_debug.supp  helgrind_release.supp  memcheck_common.supp  run_after_installation_tests.cmake  setup_env.ps1  setup_env.sh  thread_sanitizer_suppressions.txt  update_copyright_headers.sh  valgrind_suppressions.txt
tools/vcpkg_hotfixes/: change_liblzma_repository_url_to_fix_disabled_github_repo.patch  libmagic_fix_5_46_zip_regression.patch  upgrade_meson_to_130_to_fix_python_incompatibilities.patch
